refactor(adopt): remove duplicated file I/O, input mapping, and test fixtures (#478)
The module spelled the same few things out repeatedly. Collapse each to one
place, without changing any behaviour:

- AdoptionFiles now performs every text read and write the adoption does,
  replacing eight near-identical try/catch blocks that each wrapped an
  IOException in an AdoptionException. It also creates the parent directory
  before every write, which the Gradle guard and the CLAUDE.md conformer
  previously did not.
- CommandResult.describe(List) is the single command formatter; the process
  runner and the tool probe no longer re-inline String.join.
- Text holds the blank-value checks AdoptionContext and PullRequestOptions
  had a copy of each.
- The command line and the MCP tool now share their input mapping —
  Workspaces.resolve for "named directory or a temporary one",
  AdoptionContext.branchOrDefault for the branch fallback, and the builder's
  titleIfPresent/bodyIfPresent for optional pull-request metadata — so the
  two entry points cannot drift apart on what an omitted argument means.
- AdoptionAssets.agentsMd() builds the AGENTS.md installer that both the
  assets step and the conformance step write.
- AbstractBuildSystemStep defaults to BuildSystems.DEFAULTS, so its three
  subclasses no longer each repeat that wiring.
- The step tests share the AdoptionContexts fixture instead of carrying six
  copies of the same checkout setup.


Claude-Session: https://claude.ai/code/session_01Qha8cC87hBVSzwwPRbro7P

Co-authored-by: Claude <noreply@anthropic.com>